# alpaqa

./: README.md  alpaqa.py  fastq2a.py  pyproject.toml
src/alpaqa/: __main__.py
workflows/: release.yml
